@@ -33,6 +33,7 @@ export class ItemViewComponent implements OnInit {
   environment = environment;
   displayItems: Item[] = [];
   editItems: Item[] = [];
+  columns: Array<string> = [];
   isNavOpen: Boolean = false;
   total: number = 0;
   currentPage: number = 1;
@@ -116,6 +117,10 @@ export class ItemViewComponent implements OnInit {
       this.isNavOpen = res;
       this.ref.detectChanges();
     });
+    this.sharedItemService.shownColumns.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
+      this.columns = result;
+      this.ref.detectChanges();
+    });
   }
   selectAll() {
     this.sharedItemService.selectAll();
@@ -139,7 +144,6 @@ export class ItemViewComponent implements OnInit {
   navigate(event) {
     this.router.navigate([], { queryParams: {page: event}, queryParamsHandling: 'merge' });
   }
-
   ngOnDestroy() {
     this.ngUnsubscribe.next();
     this.ngUnsubscribe.complete();
