@@ -4,6 +4,11 @@
 
 - v1.0.1010                                 -
 ---------------------------------------------
+- 2020-06-02                                -
+---------------------------------------------
+.: WSM: Task: Optional Columns in Item module (WSM-40)
+
+---------------------------------------------
 - 2020-06-01                                -
 ---------------------------------------------
 .: WSM: BugFix: QR code image slow render issue (WSM-79)
